--- a/sloths.html
+++ b/sloths.html
@@ -113,7 +113,7 @@
 
 $(document).ready( function() {
   $('.marquee').marqueeify({
-    speed: 100,
+    speed: 400,
   });
 
   var score = 0;
@@ -122,7 +122,7 @@ $(document).ready( function() {
       score = score + 100;
       $(".score").html("Score: " + score);
     } else {
-      document.location.href = "kevinandjeena.com/end.html";
+      document.location.href = "http://kevinandjeena.com/end.html";
     }
   });
 });
